--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,3 +1,10 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+   name: devops
+   labels:
+     name: devops
+---
 kind: Service
 apiVersion: v1
 metadata:
